# cgp

./: CGP_action_1.cpp  CGP_action_1.cpp~  README.md  best_result.chromo  cgp_mat.cpp  node_function.cpp  stdafx.h
cgp_linux/: CGP_action_1.cpp  CMakeLists.txt  CMakeLists.txt~
cgp_linux/src/: CMakeLists.txt  CMakeLists.txt~  cgp_mat.h  node_function.cpp  node_function.h  stdafx.h
master/: node_function.h
src/: Makefile  cgp_mat.cpp  cgp_mat.cpp~  cmake_install.cmake  node_function.cpp~  node_function.h~  traindata.cpp~  traindata.h~
