set(OPENCV_INCLUDES_DIR /home/szy/opencv_310/include)
set(OPENCV_LIBS_DIR /home/szy/opencv_310/lib)

include_directories(${OPENCV_INCLUDES_DIR})
link_directories(${OPENCV_LIBS_DIR})
#find_package(OpenCV REQUIRED)

add_library(cgp_mat cgp_mat.cpp)
target_link_libraries(cgp_mat ${OPENCV_LIBS_DIR}/libopencv_highgui.so)
target_link_libraries(cgp_mat ${OPENCV_LIBS_DIR}/libopencv_imgcodecs.so)
target_link_libraries(cgp_mat ${OPENCV_LIBS_DIR}/libopencv_core.so)
target_link_libraries(cgp_mat ${OPENCV_LIBS_DIR}/libopencv_imgproc.so)
target_link_libraries(cgp_mat ${OPENCV_LIBS_DIR}/libopencv_optflow.so)
target_link_libraries(cgp_mat ${OPENCV_LIBS_DIR}/libopencv_video.so)
target_link_libraries(cgp_mat ${OPENCV_LIBS_DIR}/libopencv_xfeatures2d.so)
target_link_libraries(cgp_mat ${OPENCV_LIBS_DIR}/libopencv_features2d.so)

add_library(node_function node_function.cpp)
target_link_libraries(node_function ${OPENCV_LIBS_DIR}/libopencv_highgui.so)
target_link_libraries(node_function ${OPENCV_LIBS_DIR}/libopencv_imgcodecs.so)
target_link_libraries(node_function ${OPENCV_LIBS_DIR}/libopencv_core.so)
target_link_libraries(node_function ${OPENCV_LIBS_DIR}/libopencv_imgproc.so)
target_link_libraries(node_function ${OPENCV_LIBS_DIR}/libopencv_optflow.so)
target_link_libraries(node_function ${OPENCV_LIBS_DIR}/libopencv_video.so)
target_link_libraries(node_function ${OPENCV_LIBS_DIR}/libopencv_xfeatures2d.so)
target_link_libraries(node_function ${OPENCV_LIBS_DIR}/libopencv_features2d.so)
